--- a/style/index.scss
+++ b/style/index.scss
@@ -7,82 +7,69 @@ html,body{
 .container{
     position: relative;
     @media(min-width:1px) and (max-width:500px){
-        width:450px;
-        height:700px;
+        width: 445px;
+        height: 570px;
         
     }
-    @media(min-width:501px) and (max-width:800px){
-        width:780x;
-        height:500px;
+    @media(min-width:501px) and (max-width:1000px){
+        width: 832px;
+        height: 405px;
+        margin-left:auto;
+        margin-right: auto;
         
     }
-    @media(min-width:801px) and (max-width:1400px){
+    @media(min-width:1001px) and (max-width:1600px){
         margin-left:auto;
         margin-right: auto;
         width: 600px;
-        height: 700px;
+        height: 235px;
         
     }
     border: 5px solid black;
     .child-one{
         @include children();
-        background-color:red;
-        @media(min-width:1px) and (max-width:500px){
-            width:445px;
-            height:210px;
-            left:2px;
-        }
-        @media(min-width:501px) and (max-width:800px){
-            width:770px;
-            height:215px;
-            left:1px;
-        }
-        @media(min-width:801px) and (max-width:1400px){
+        background-color:rgb(100, 10, 10);
+            @media(min-width:1px) and (max-width:500px){
+            width: 445px;
+            left: 2px;
+            }
+            @media(min-width:501px) and (max-width:1000px){
+            width: 830px;
+            }
+            @media(min-width:1001px) and (max-width:1600px){
             display: inline-block;
-            height: 650px;
-            width: auto;
-            
-        }
+            width: 200px;
+            }
     }
     .child-two{
         @include children();
-        background-color: blue;
-        @media(min-width:1px) and (max-width:500px){
-            width:445px;
-            height:210px;
-            left:2px;
-        }
-        @media(min-width:501px) and (max-width:800px){
-            width:380px;
-            height:215px;
-            left:1px;
-        }
-        @media(min-width:801px) and (max-width:1400px){
+        background-color: rgb(20, 12, 88);
+            @media(min-width:1px) and (max-width:500px){
+            width: 445px;  
+            left: 2px;
+            }
+            @media(min-width:501px) and (max-width:1000px){
+            width: 415px;
+            }
+            @media(min-width:1001px) and (max-width:1600px){
             display: inline-block;
-            height: 650px;
-            width: auto;
-            
-        }
+            width: 200px;
+            }
     }
     .child-three{
         @include children();
-        background-color: yellow;
-        @media(min-width:1px) and (max-width:500px){
-            width:445px;
-            height:210px;
-            left:2px;
-        }
-        @media(min-width:501px) and (max-width:800px){
-            width:389px;
-            height:215px;
-            left:1px;
-        }
-        @media(min-width:801px) and (max-width:1400px){
-            display: inline-block;
-            height: 650px;
-            width: auto;
-            
-        }
+        background-color: rgb(26, 109, 18);
+            @media(min-width:1px) and (max-width:500px){
+                width: 445px;
+                left: 2px;
+            }
+            @media(min-width:501px) and (max-width:1000px){
+                width: 415px;
+            }
+            @media(min-width: 1001px) and (max-width:1600px){
+                display: inline-block;
+                width: 200px;
+            }
     }
 }
 p{
